--- a/index.html
+++ b/index.html
@@ -17,5 +17,28 @@
     />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main>
+      <section class="hero">
+        <div class="container">
+          <h1 class="title hero__title">
+            ice cream made with <span class="hero__title-accent">passion</span>
+          </h1>
+          <ul class="hero-list">
+            <li class="hero-list__item">
+              <a href="" class="button hero-list__link">Products</a>
+            </li>
+            <li class="hero-list__item">
+              <a href="" class="button hero-list__link">How it’s made?</a>
+            </li>
+          <!-- </ul>
+          <picture>
+            <img src="" alt="" />
+          </picture> -->
+        </div>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
