starting hero tablet

--- a/index.html
+++ b/index.html
@@ -32,13 +32,21 @@
             <li class="hero-list__item">
               <a href="" class="button hero-list__link">How it’s made?</a>
             </li>
-          <!-- </ul>
-          <picture>
+          </ul>
+          <div class="description">
+            <p class="description__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et
+            </p>
+            <button type="button" class="button description__button">t</button>
+          </div>
+          <!-- <picture>
             <img src="" alt="" />
           </picture> -->
         </div>
       </section>
     </main>
     <footer></footer>
+    <script src="./js/modernizr-custom.js"></script>
   </body>
 </html>
