--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
               <a href="" class="button hero-list__link">How it’s made?</a>
             </li>
           </ul>
+
           <div class="description">
             <p class="description__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -40,9 +41,54 @@
             </p>
             <button type="button" class="button description__button">t</button>
           </div>
-          <!-- <picture>
-            <img src="" alt="" />
-          </picture> -->
+          <picture>
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ./images/tablet/hero-bio-eco@1x.webp 1x,
+                ./images/tablet/hero-bio-eco@2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ./images/tablet/hero-bio-eco@1x.png 1x,
+                ./images/tablet/hero-bio-eco@2x.png 2x
+              "
+            />
+            <img
+              src="/images/tablet/hero-bio-eco@1x.png"
+              alt="Bio Eco"
+              class="hero__images bio-eco"
+              width="152"
+              height="154"
+            />
+          </picture>
+          <picture>
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ./images/tablet/hero-so-tasty@1x.webp 1x,
+                ./images/tablet/hero-so-tasty@2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                ./images/tablet/hero-so-tasty@1x.png 1x,
+                ./images/tablet/hero-so-tasty@2x.png 2x
+              "
+            />
+            <img
+              src="/images/tablet/hero-so-tasty@1x.png"
+              alt="Bio Eco"
+              class="hero__images so-tasty"
+              width="190"
+              height="15"
+            />
+          </picture>
         </div>
       </section>
     </main>
